Insert Hover,Menu products

--- a/PageWeb/index.html
+++ b/PageWeb/index.html
@@ -34,7 +34,7 @@
 
          <!--First Message-->
          <section class="message">
-            <h1>"Seja bem vindo(a) ao WC"</h1>
+            <h1 class="h2title0">Seja bem vindo(a) ao WC</h1>
          </section>
 
          <section class="cupons">
@@ -50,11 +50,13 @@
          </section>
 
          <!--Products First Page-->
-         <section class="fpageprodu">
-
+         <section class="fpageprodu" >
+            <img src="../Images/GreenWoman.jpg" class="formatimg m1 zoom">
+            <img src="../Images/PantsJogger.jpg" class="formatimg m2 zoom">
+            <img src="../Images/ManJacket2.jpg" class="formatimg m3 zoom">          
+            <img src="../Images/ManJacket.jpg" class="formatimg m4 zoom">
+            <img src="../Images/PantsJogger.jpg" class="formatimg m5 zoom">     
+            <img src="../Images/GreenWoman.jpg" class="formatimg m6 zoom">
          </section>
-           
-      
-  
 </body>
 </html>
