Insert Logo,logo carshop and Pants Page

--- a/PageWeb/index.html
+++ b/PageWeb/index.html
@@ -11,12 +11,13 @@
      
       <!--Menu da NavBar-->
          <section class="Navbar" >
-                <div class="menu">
-                   
-                    <h2 href="./Shirt.html" class="letterMenu">Camiseta </h2>
-                    <h2 href="./Pants.html" class="letterMenu">Calças </h2>
-                    <h2 href="./Acessory.html" class="letterMenu">Acessórios </h2> 
-                    <h2 href="./OfferDay.html" class="letterMenu">Promoções do dia</h2>
+            <a><img src="../Images/icons8-carrinho-de-compras-carregado-96.png" class="iconmarket"></a>
+            <a href="./index.html"><img src="../Images/icons8-w-100.png" class="iconlogo"></a>    
+            <div class="menu">
+                    <a href="./Shirt.html" class="letterMenu">Camiseta </a>
+                    <a href="./Pants.html" class="letterMenu">Calças </a>
+                    <a href="./Acessory.html" class="letterMenu">Acessórios </a> 
+                    <a href="./OfferDay.html" class="letterMenu">Promoções do dia</a>
                 </div>
          </section>
 
