--- a/PageWeb/Pants.html
+++ b/PageWeb/Pants.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../PageCss/pants.css">
     <title>Document</title>
 </head>
 <body>
-    
+
+     <!--Menu da NavBar-->
+     <section class="Navbar" >
+        <a><img src="../Images/icons8-carrinho-de-compras-carregado-96.png" class="iconmarket"></a>
+        <a href="./index.html"><img src="../Images/icons8-w-100.png" class="iconlogo"></a>    
+        <div class="menu">
+                <a href="./Shirt.html" class="letterMenu">Camiseta </a>
+                <a href="./Pants.html" class="letterMenu">Calças </a>
+                <a href="./Acessory.html" class="letterMenu">Acessórios </a> 
+                <a href="./OfferDay.html" class="letterMenu">Promoções do dia</a>
+            </div>
+     </section>
+ <br>
+ <section class="fpageprodu" >
+
+ </section>
 </body>
 </html>
