Insert Images,Pages and New Elements

--- a/PageWeb/Shirt.html
+++ b/PageWeb/Shirt.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../PageCss/pants.css">
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
+     <!--Menu da NavBar-->
+     <section class="Navbar" >
+        <a><img src="../Images/icons8-carrinho-de-compras-carregado-96.png" class="iconmarket"></a>
+        <a href="./index.html"><img src="../Images/icons8-w-100.png" class="iconlogo"></a>    
+        <div class="menu">
+                <a href="./Shirt.html" class="letterMenu">Camiseta </a>
+                <a href="./Pants.html" class="letterMenu">Calças </a>
+                <a href="./Acessory.html" class="letterMenu">Acessórios </a> 
+                <a href="./OfferDay.html" class="letterMenu">Promoções do dia</a>
+            </div>
+     </section>
+ <br>
+ <h1 class="titlefont">Camiseta</h1>
+ <section class="fpageprodu" >
+    <img src="../Images/shirt (1).jpg" class="formatimg m1">
+    <img src="../Images/shirt (2).jpg" class="formatimg m2">
+    <img src="../Images/shirt (3).jpg" class="formatimg m3">
+    <img src="../Images/shirt (4).jpg" class="formatimg m4">
+    <img src="../Images/shirt (5).jpg" class="formatimg m5">
+    <img src="../Images/shirt (6).jpg" class="formatimg m6">
+</section>
 </body>
 </html>
