--- a/PageWeb/Pants.html
+++ b/PageWeb/Pants.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../PageCss/pants.css">
-    <title>Document</title>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -21,8 +21,14 @@
             </div>
      </section>
  <br>
+ <h1 class="titlefont">Calças</h1>
  <section class="fpageprodu" >
-
- </section>
+    <img src="../Images/7273024704_654a076044_b.jpg" class="formatimg m1">
+    <img src="../Images/b5cf52c6ae2ce44744aed9737a07ec9d.jpg" class="formatimg m2">
+    <img src="../Images/blogueiro-bruno-figueredo-uberlandia-mg-minas-gerais-sp-melhor-blog-calça-listra-lateral-vertical-calvin-klein.jpg" class="formatimg m3">
+    <img src="../Images/calca-jeans-masculina-adulto-skinny-2433014-ogochi-9816.jpg" class="formatimg m4">
+    <img src="../Images/jeans-g29489d008_1280.jpg" class="formatimg m5">
+    <img src="../Images/PantsJogger.jpg" class="formatimg m6">
+</section>
 </body>
 </html>
